implement the first page

--- a/sass/colors.sass
+++ b/sass/colors.sass
@@ -1,2 +1,6 @@
 
 $pink-color: rgba(255, 0, 158, 1)
+$blue-color: rgba(21, 133, 255, 1)
+$blue-primary: #3E06DE
+$blue-medium: rgba(21, 133, 255, 1)
+$black-color: #0C012C
