--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -8,6 +8,15 @@
     unicode-range: U+0020-00FE
 
 @font-face
+    font-family: 'AvantGarde Medium'
+    src: url('../fonts/AvantGardMedium/AvantGarde-Medium.eot')
+    src: url('../fonts/AvantGardMedium/AvantGarde-Medium.eot?#iefix') format("embedded-opentype"), url('../fonts/AvantGardMedium/AvantGarde-Medium.woff2') format("woff2"), url('../fonts/AvantGardMedium/AvantGarde-Medium.woff') format("woff")
+    font-weight: 500
+    font-style: normal
+    font-stretch: normal
+    unicode-range: U+0020-00FE
+
+@font-face
     font-family: 'Avenir Light'
     src: url('../fonts/Avenir/Avenir-Light.eot')
     src: url('../fonts/Avenir/Avenir-Light.eot?#iefix') format("embedded-opentype"), url('../fonts/Avenir/Avenir-Light.woff2') format("woff2"), url('../fonts/Avenir/Avenir-Light.woff') format("woff")
@@ -17,9 +26,18 @@
     unicode-range: U+0020-00FE
 
 @font-face
+    font-family: 'Avenir Regular'
+    src: url('../fonts/Avenir/Avenir-Regular.eot')
+    src: url('../fonts/Avenir/Avenir-Regular.eot?#iefix') format("embedded-opentype"), url('../fonts/Avenir/Avenir-Regular.woff2') format("woff2"), url('../fonts/Avenir/Avenir-Regular.woff') format("woff")
+    font-weight: 400
+    font-style: normal
+    font-stretch: normal
+    unicode-range: U+0020-02DC
+
+@font-face
     font-family: 'Avenir Medium'
-    src: url('../fonts/Avenir/AvenirMedium/AvenirMedium.eot')
-    src: url('../fonts/Avenir/AvenirMedium/AvenirMedium.eot?#iefix') format("embedded-opentype"), url('../fonts/Avenir/AvenirMedium/AvenirMedium.woff2') format("woff2"), url('../fonts/Avenir/AvenirMedium/AvenirMedium.woff') format("woff"), url('../fonts/Avenir/AvenirMedium/AvenirMedium.svg#AvenirMedium') format("svg")
+    src: url('../fonts/Avenir/Avenir-Medium.eot')
+    src: url('../fonts/Avenir/Avenir-Medium.eot?#iefix') format("embedded-opentype"), url('../fonts/Avenir/Avenir-Medium.woff2') format("woff2"), url('../fonts/Avenir/Avenir-Medium.woff') format("woff")
     font-weight: 500
     font-style: normal
     font-stretch: normal
@@ -27,9 +45,9 @@
 
 @font-face
     font-family: 'Avenir Black'
-    src: url('../fonts/Avenir/AvenirBlack/AvenirBlack.eot')
-    src: url('../fonts/Avenir/AvenirBlack/AvenirBlack.eot?#iefix') format("embedded-opentype"), url('../fonts/Avenir/AvenirBlack/AvenirBlack.woff2') format("woff2"), url('../fonts/Avenir/AvenirBlack/AvenirBlack.woff') format("woff"), url('../fonts/Avenir/AvenirBlack/AvenirBlack.svg#AvenirBlack') format("svg")
-    font-weight: 900
+    src: url('../fonts/Avenir/Avenir-Black.eot')
+    src: url('../fonts/Avenir/Avenir-Black.eot?#iefix') format("embedded-opentype"), url('../fonts/Avenir/Avenir-Black.woff2') format("woff2"), url('../fonts/Avenir/Avenir-Black.woff') format("woff")
+    font-weight: 800
     font-style: normal
     font-stretch: normal
     unicode-range: U+0020-02DC
