--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,75 @@ img {
   max-width: 100%;
   display: block; }
 
+.main-title {
+  font-family: 'AvantGarde Bold', sans-serif;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 64px; }
+
+.middle-main-title {
+  font-family: 'AvantGarde Bold', sans-serif;
+  font-weight: 700;
+  font-size: 46px;
+  line-height: 50px; }
+
+.small-title {
+  font-size: 24px;
+  line-height: 28px;
+  text-transform: uppercase; }
+
+.smallest-title {
+  font-family: 'Avenir Heavy', sans-serif;
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 18px;
+  text-transform: uppercase; }
+
+.description {
+  font-family: 'Avenir Regular', sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.01em; }
+
+.button {
+  display: inline-flex;
+  border-radius: 100px;
+  font-family: 'Avenir Medium', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: .2em;
+  padding: 14px 20px;
+  color: white; }
+  .button.small {
+    padding: 14px 18px;
+    font-size: 14px;
+    width: 100%;
+    max-width: 134px; }
+  .button.full-blue {
+    background-color: #1585ff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1); }
+  .button.transparent-blue {
+    filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.1));
+    background-color: transparent;
+    border: 1px solid #1585ff;
+    color: #1585ff; }
+  .button.primary-blue {
+    background-color: #3E06DE;
+    letter-spacing: .02em; }
+    .button.primary-blue img {
+      margin-left: 6px; }
+
+.hover-state {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+  .hover-state:hover {
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    opacity: .9;
+    transform: translateY(-2px); }
+
 header {
   width: 100%;
   padding: 36px 0;
@@ -68,23 +137,146 @@ header {
     display: flex;
     justify-content: space-between; }
 
-.main-title {
-  font-family: 'AvantGarde Bold', sans-serif;
-  font-weight: 700;
-  font-size: 60px;
-  line-height: 64px; }
+.main {
+  padding: 220px 0 116px; }
+  .main.home {
+    background-color: #FFEC9A; }
+    .main.home .main-title,
+    .main.home .description {
+      color: #ff009e; }
+    .main.home .text-section {
+      max-width: 380px; }
+  .main .main-title {
+    margin-bottom: 20px; }
+  .main .description {
+    font-family: 'AvantGarde Medium', sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 34px; }
+  .main .text-section {
+    max-width: 440px; }
+  .main .buttons-wrapper {
+    display: flex;
+    flex-direction: row;
+    margin-top: 48px; }
+    .main .buttons-wrapper .button {
+      margin-right: 20px; }
+      .main .buttons-wrapper .button:last-of-type {
+        margin-right: 0; }
+  .main .media-section.video {
+    width: 100%;
+    max-width: 700px;
+    min-height: 390px; }
+  .main .tiles-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 130px;
+    margin-right: -10px;
+    margin-left: -10px; }
+    .main .tiles-wrapper .tile-wrapper {
+      padding: 0 10px;
+      width: 100%;
+      max-width: 460px; }
+    .main .tiles-wrapper .tile {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      background-color: white;
+      padding: 32px 38px;
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
+      border-radius: 10px; }
+      .main .tiles-wrapper .tile .tile-title {
+        font-family: 'Avenir Medium', sans-serif;
+        font-weight: 800;
+        color: #1585ff; }
+      .main .tiles-wrapper .tile .button {
+        margin-left: 30px; }
+        .main .tiles-wrapper .tile .button img {
+          width: 16px; }
+  .main .wrapper-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
 
-.main.home {
-  background-color: #ffec9a; }
-  .main.home .main-title {
-    color: #ff009e; }
+.benefits {
+  background-color: #D4F0FB; }
+  .benefits .smallest-title {
+    color: #3E06DE;
+    margin-bottom: 16px; }
+  .benefits .middle-main-title {
+    margin-bottom: 24px;
+    color: #3E06DE; }
+  .benefits .description {
+    max-width: 340px;
+    color: #0C012C;
+    margin-bottom: 36px; }
+  .benefits .content-wrapper {
+    display: flex;
+    flex-direction: row; }
+  .benefits .content-block {
+    padding: 174px 0 150px;
+    max-width: 400px; }
+  .benefits .form-block {
+    background: #FFFFFF;
+    max-width: 520px;
+    min-height: 420px;
+    border: 1px solid #E2E8F0;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.05);
+    border-radius: 8px; }
+  .benefits .img-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 100%; }
+    .benefits .img-block img {
+      max-width: 580px; }
 
-.main .description {
-  font-size: 30px;
-  line-height: 34px; }
-
-.main .text-section {
-  max-width: 440px; }
+.how-it-works {
+  background-color: #FFF5CC;
+  color: #3E06DE;
+  padding: 174px 0 216px; }
+  .how-it-works .content-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .how-it-works .content-wrapper .description {
+      text-align: center;
+      max-width: 560px; }
+  .how-it-works .middle-main-title {
+    margin-bottom: 28px; }
+  .how-it-works .description {
+    color: #0C012C; }
+  .how-it-works .tiles-wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-left: -12px;
+    margin-right: -12px;
+    margin-top: 180px; }
+    .how-it-works .tiles-wrapper .tile {
+      padding: 0 12px;
+      width: 100%; }
+      .how-it-works .tiles-wrapper .tile .tile-body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.05);
+        border-radius: 10px;
+        background-color: #ffffff;
+        padding: 0 20px 40px; }
+        .how-it-works .tiles-wrapper .tile .tile-body img {
+          min-height: 240px;
+          margin-top: -82px; }
+        .how-it-works .tiles-wrapper .tile .tile-body .smallest-title {
+          margin-top: 40px;
+          text-align: center;
+          font-size: 20px;
+          line-height: 24px;
+          text-transform: initial;
+          color: #0C012C;
+          letter-spacing: 0.02em; }
 
 /*==========  Desktop First Method  ==========*/
 /* Large Devices, Wide Screens */
@@ -147,3 +339,10 @@ header {
 @media only screen and (min-width: 1200px) {
   .container {
     max-width: 1220px; } }
+
+@media only screen and (min-width: 1400px) {
+  header .container {
+    max-width: 100%; }
+  header .wrapper-line {
+    padding-left: 50px;
+    padding-right: 50px; } }
