--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -74,3 +74,11 @@
 	.container
 		max-width: 1220px
 
+@media only screen and (min-width : 1400px)
+	header
+		.container
+			max-width: 100%
+		.wrapper-line
+			padding-left: 50px
+			padding-right: 50px
+
