--- a/sass/main.sass
+++ b/sass/main.sass
@@ -29,24 +29,7 @@ body textarea:required:valid
 
 //Custom Styles Here
 
-body
-	margin: 0
-
-a
-	text-decoration: none
-
-ul
-	margin: 0
-	padding: 0
-	li
-		list-style-type: none
-
-h1,h3,h4,h4,h5,h6,p
-	margin: 0
-
-img
-	max-width: 100%
-	display: block
+@import "settings.sass"
 
 header
 	width: 100%
@@ -76,22 +59,148 @@ header
 		justify-content: space-between
 
 
-.main-title
-	font-family: 'AvantGarde Bold', sans-serif
-	font-weight: 700
-	font-size: 60px
-	line-height: 64px
 
 .main
+	padding: 220px 0 116px
 	&.home
-		background-color: rgba(255, 236, 154, 1)
-		.main-title
+		background-color: #FFEC9A
+		.main-title,
+		.description
 			color: $pink-color
+		.text-section
+			max-width: 380px
+	.main-title
+		margin-bottom: 20px
 	.description
+		font-family: 'AvantGarde Medium', sans-serif
+		font-weight: 500
 		font-size: 30px
 		line-height: 34px
 	.text-section
 		max-width: 440px
+	.buttons-wrapper
+		display: flex
+		flex-direction: row
+		margin-top: 48px
+		.button
+			margin-right: 20px
+			&:last-of-type
+				margin-right: 0
+	.media-section
+		&.video
+			width: 100%
+			max-width: 700px
+			min-height: 390px
+	.tiles-wrapper
+		display: flex
+		flex-direction: row
+		justify-content: center
+		margin-top: 130px
+		margin-right: -10px
+		margin-left: -10px
+		.tile-wrapper
+			padding: 0 10px
+			width: 100%
+			max-width: 460px
+		.tile
+			display: flex
+			flex-direction: row
+			align-items: center
+			background-color: white
+			padding: 32px 38px
+			box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05)
+			border-radius: 10px
+			.tile-title
+				font-family: 'Avenir Medium', sans-serif
+				font-weight: 800
+				color: $blue-medium
+			.button
+				margin-left: 30px
+				img
+					width: 16px
+	.wrapper-content
+		display: flex
+		flex-direction: row
+		justify-content: space-between
+
+.benefits
+	background-color: #D4F0FB
+	.smallest-title
+		color: $blue-primary
+		margin-bottom: 16px
+	.middle-main-title
+		margin-bottom: 24px
+		color: $blue-primary
+	.description
+		max-width: 340px
+		color: $black-color
+		margin-bottom: 36px
+	.content-wrapper
+		display: flex
+		flex-direction: row
+	.content-block
+		padding: 174px 0 150px
+		max-width: 400px
+	.form-block
+		background: #FFFFFF
+		max-width: 520px
+		min-height: 420px
+		border: 1px solid #E2E8F0
+		box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.05)
+		border-radius: 8px
+	.img-block
+		display: flex
+		flex-direction: column
+		justify-content: flex-end
+		align-items: flex-end
+		width: 100%
+		img
+			max-width: 580px
+
+.how-it-works
+	background-color: #FFF5CC
+	color: $blue-primary
+	padding: 174px 0 216px
+	.content-wrapper
+		display: flex
+		flex-direction: column
+		align-items: center
+		.description
+			text-align: center
+			max-width: 560px
+	.middle-main-title
+		margin-bottom: 28px
+	.description
+		color: $black-color
+	.tiles-wrapper
+		display: flex
+		flex-direction: row
+		width: 100%
+		margin-left: -12px
+		margin-right: -12px
+		margin-top: 180px
+		.tile
+			padding: 0 12px
+			width: 100%
+			.tile-body
+				display: flex
+				flex-direction: column
+				align-items: center
+				box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.05)
+				border-radius: 10px
+				background-color: #ffffff
+				padding: 0 20px 40px
+				img
+					min-height: 240px
+					margin-top: -82px
+				.smallest-title
+					margin-top: 40px
+					text-align: center
+					font-size: 20px
+					line-height: 24px
+					text-transform: initial
+					color: $black-color
+					letter-spacing: 0.02em
 
 
 //ALWAYS END
