--- a/sass/settings.sass
+++ b/sass/settings.sass
@@ -77,6 +77,9 @@ img
         letter-spacing: .02em
         img
             margin-left: 6px
+    &.medium-blue
+        background-color: $blue-medium
+        letter-spacing: 0.02em
 
 
 .hover-state
@@ -87,3 +90,137 @@ img
         transition: all 0.3s ease-in-out
         opacity: .9
         transform: translateY(-2px)
+
+
+
+//inserted forms
+
+.form-block
+    display: flex
+    flex-direction: column
+    margin-top: 40px
+    max-width: 450px
+    .form-all
+        border: none
+        margin: 0
+        background-color: transparent
+    .form-section
+        padding: 32px 36px
+        background-color: rgba(255, 51, 177, 1)
+        border-radius: 10px
+        .form-header-group
+            padding: 0
+            margin: 0
+            border: none
+        .form-header
+            font-family: 'itc-avant-garde-gothic-pro', sans-serif
+            font-weight: 700
+            //color: $white-color
+            font-size: 24px
+            line-height: 28px
+            letter-spacing: 0.01em
+        .form-subHeader
+            margin-bottom: 12px
+        .form-subHeader,
+        .form-label
+            font-family: "Avenir Medium", sans-serif
+            font-weight: 500
+            font-size: 14px
+            line-height: 20px
+            //color: $white-color
+            letter-spacing: 0.01em
+        .form-textbox
+            font-family: "Avenir Regular", sans-serif
+            font-weight: 400
+            font-size: 16px
+            line-height: 24px
+            letter-spacing: 0.01em
+            height: 34px
+            color: rgba(148, 163, 184, 1)
+            padding-left: 10px!important
+            &:focus-visible
+                outline: none
+            &::-webkit-input-placeholder
+                font-size: 16px
+                color: rgba(148, 163, 184, 1)
+            &:-moz-placeholder
+                font-size: 16px
+                color: rgba(148, 163, 184, 1)
+            &::-moz-placeholder
+                font-size: 16px
+                color: rgba(148, 163, 184, 1)
+            &:-ms-input-placeholder
+                font-size: 16px
+                color: rgba(148, 163, 184, 1)
+            &::placeholder
+                font-size: 16px
+                color: rgba(148, 163, 184, 1)
+        .form-line
+            margin: 0!important
+            padding: 0
+            &.little-indent
+                margin-bottom: 10px!important
+        .form-label-top
+            margin-bottom: 0
+        .form-line-error
+            background-color: transparent
+        .form-error-message
+            margin-top: 5px
+            padding: 3px 8px 3px 18px
+            font-size: 12px
+            line-height: 14px
+        .bottom-horizont-section
+            width: 100%
+            display: flex
+            flex-direction: row
+            justify-content: space-between
+            margin-top: 14px
+            .form-radio-wrapper
+                width: 250px
+                .form-label
+                    font-family: "Avenir Medium", sans-serif
+                    font-weight: 500
+                    margin-bottom: 8px
+                .form-radio-item
+                    display: flex
+                    margin-bottom: 8px
+                    &:last-of-type
+                        margin-bottom: 0
+                    label
+                        min-height: initial
+                        font-family: "Avenir Regular", sans-serif
+                        font-size: 14px
+                        line-height: 16px
+                        //color: $white-color
+                        padding-left: 18px
+                        &::before
+                            top: 1px
+                            width: 12px
+                            height: 12px
+                            background-color: transparent
+                            //border-color: $white-color
+                        &::after
+                            width: 8px
+                            height: 8px
+                            top: 3px
+                            left: 2px
+                            background-color: white
+            .form-input-wide
+                display: flex
+                flex-direction: column
+                align-items: flex-start
+            .form-buttons-wrapper
+                margin: 0
+                padding: 0
+                border: none
+            .form-button-wrapper
+                display: flex
+                flex-direction: column
+                justify-content: flex-end
+                width: initial
+                .button
+                    min-width: initial
+                    margin-left: 0
+                    font-family: "Avenir Medium", sans-serif
+                    font-weight: 500
+                    border: none
